--- a/Database/exe/pom.xml
+++ b/Database/exe/pom.xml
@@ -32,6 +32,12 @@
       <artifactId>jna-platform</artifactId>
       <version>5.6.0</version>
     </dependency>
+
+	<dependency>
+    	<groupId>org.hibernate</groupId>
+    	<artifactId>hibernate-core</artifactId>
+    	<version>5.4.27.Final</version>
+	</dependency>
   </dependencies>
 
 
